# ogre3d_projects

./: README.md  stack.xml
ogre_basics/: CMakeList_Ogre_Example.txt  CMakeList_Ogre_Example2.txt  CMakeLists.txt  CMakeLists_backup.txt  README.md  mainpage.dox  manifest.xml
ogre_basics/config/level_builder/: ogre.cfg  test_level_builder_resources.cfg
ogre_basics/config/scene_loader/: test_scene_loader_resources.cfg
ogre_basics/include/controllers/: CameraController.h
ogre_basics/include/game_levels/: GameLevel.h  GameLevel2D.h
ogre_basics/include/game_objects/: BoxObject.h  GameObject.h
ogre_basics/include/input_handling/: InputEventHandler.h  InputManager.h
ogre_basics/include/io_handling/: IOManager.h
ogre_basics/include/state_management/: StateElement.h  StateManager.h
ogre_basics/include/state_types/: StateInterface.h  TestDisplayImageState.h  TestLevelBuilder.h  TestSceneLoader.h  TestSceneState.h  TestState.h
ogre_basics/include/utilities/: DotSceneLoader.h  General.h  MaterialCreator.h  OgreBulletConversions.h  ShapeDrawer.h
ogre_basics/media/bullet/models/: Mountains.bullet
ogre_basics/media/scene_loader_application/scenes/Mountains/: Circle.023.mesh.xml  Cube.005.mesh.xml  Cube.007.mesh  Cube.009.mesh.xml  Material.001.material  Material.004.material  Plane.001.mesh.xml  Plane.002.mesh.xml  Plane.mesh
ogre_basics/media/scenes/: Mountains.scene
ogre_basics/media/scenes/Mountains/: Circle.023.mesh  Cube.008.mesh  Cube.008.mesh.xml  Cube.010.mesh  Material.002.material  Material.006.material  Mountains.material  Mountains.scene  Mountains.scene~  Plane.001.mesh  Plane.002.mesh  Plane.mesh.xml
ogre_basics/src/: BoxObject.cpp  CameraController.cpp  IOManager.cpp  InputManager.cpp  StateManager.cpp  TestDisplayImageState.cpp  TestState.cpp  test_class.cpp
ogre_basics/src/controllers/: CameraController.cpp
ogre_basics/src/game_levels/: GameLevel2D.cpp
ogre_basics/src/game_objects/: BoxObject.cpp  GameObject.cpp
ogre_basics/src/state_management/: StateManager.cpp
ogre_basics/src/state_types/: TestDisplayImageState.cpp  TestLevelBuilder.cpp  TestSceneLoader.cpp  TestSceneState.cpp  TestState.cpp
ogre_basics/src/tests/: test_level_builder.cpp  test_material_creator.cpp  test_scene_loader.cpp  test_shape_drawer.cpp  test_state_manager.cpp
ogre_basics/src/utilities/: DotSceneLoader.cpp  General.cpp  MaterialCreator.cpp  ShapeDrawer.cpp
